<resources>
    <string name="app_name">TipSplit</string>
    <string name="bill_total_with_tax">Bill Total with Tax:</string>
    <string name="tip_percent">Tip Percent:</string>
    <string name="_12">12%</string>
    <string name="_15">15%</string>
    <string name="_18">18%</string>
    <string name="_20">20%</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="total_with_tip">Total with Tip:</string>
    <string name="number_of_people">Number of People:</string>
    <string name="go">GO</string>
    <string name="total_per_person">Total per Person:</string>
    <string name="clear">CLEAR</string>
    <string name="overage">Overage:</string>
    <string name="total_with_tip_here">Total with tip here</string>
    <string name="total_per_person_here">Total per person here</string>

</resources>